=========================================================================
CHANGE LOG
=========================================================================

2011-04-01 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* transparent ribbons

	* naive volume ray tracing; better version coming soon

	* small bug fixes

2011-04-01 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* introducing gradient backgrounds (non-ray tracing; testing)

	* Windows bug fixes

	* Rlight-click Volumes fix

2011-04-01 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* PyMOL v1.4b1 -- adds volumes, glew, shaders, bug fixes, etc

2011-02-03 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Added PyMOL Web Services API; for information run
	  firefox pymol/modules/web/examples/index.html

2011-01-18 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Cygwin build fix (thanks Alex)

2011-01-18 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* mol2 atom types

2011-01-11 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* mol2 multi-state save bugfix

2011-01-11 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* added mol2.py
	* File->Save Moleulce

2011-01-11 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* nascent mol2 writing

2011-01-11 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* removed duplicate function; thanks Thomas

2011-01-03 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Fixed multi-state ray trace bug for CGO objects

2010-10-13 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Fixed Glutamine label problem in Residue menu; now ALT-Q.

2010-10-13 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Trajectory fix

2010-10-08 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* charge wizard fix


2010-10-06 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* memory fix on angles and dihedrals

	* documentation update on cealign


2010-10-02 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Fully implemented dynamic measures; enable by turning on