@@ -900,6 +900,8 @@ CSetting *SettingNewFromPyList(PyMOLGlobals * G, PyObject * list);
 #define cSetting_bg_rgb_bottom              664
 #define cSetting_ray_volume                 665
 #define cSetting_ribbon_transparency        666  /* oh noes */
+#define cSetting_state_counter_mode         667 /* -1=as fraction; 0=off; 1=as fraction; 2=no fraction */
+
 
 /* when you add a new setting also remember:
    layer1/Setting.c
@@ -910,6 +912,6 @@ CSetting *SettingNewFromPyList(PyMOLGlobals * G, PyObject * list);
 
 /* cSetting_ss_INIT must always be last setting_index +1 */
 
-#define cSetting_INIT                       667
+#define cSetting_INIT                       668
 
 #endif
