@@ -8549,3 +8549,88 @@ sym_dict = {}
 for key in sym_base.keys():
     for sym in sym_base[key]:
         sym_dict[sym] = key
+
+
+space_group_map = {
+    "P1"     : "P 1",       
+    "P111"   : "P 1 1 1",    
+    "A111"   : "A 1 1 1",
+    "P-1"    : "P -1",
+    "P1-"    : "P 1-",
+    "P2"     : "P 2",
+    "P121"   : "P 1 2 1",
+    "P21"    : "P 21", 
+    "P1211"  : "P 1 21 1", 
+    "P1121"  : "P 1 1 21",
+    "B2"     : "B 2",
+    "B112"   : "B 1 1 2",
+    "C2"     : "C 2",
+    "C121"   : "C 1 2 1",
+    "C1211"  : "C 1 21 1",
+    "P222"   : "P 2 2 2",
+    "P2221"  : "P 2 2 21",
+    "P21212" : "P 21 21 2",
+    "P21212A": "P 21 21 2A",
+    "P21221" : "P 21 2 21",
+    "P212121": "P 21 21 21",
+    "B2212"  : "B 2 21 2",
+    "C2221"  : "C 2 2 21",
+    "C222"   : "C 2 2 2",
+    "F222"   : "F 2 2 2",
+    "I222"   : "I 2 2 2",
+    "I212121": "I 21 21 21",
+    "P4"     : "P 4",
+    "P41"    : "P 41",
+    "P42"    : "P 42",
+    "P43"    : "P 43",
+    "I4"     : "I 4",
+    "I41"    : "I 41",
+    "P422"   : "P 4 2 2",
+    "P4212"  : "P 4 21 2",
+    "P4122"  : "P 41 2 2",
+    "P41212" : "P 41 21 2",
+    "P4222"  : "P 42 2 2",
+    "P42212" : "P 42 21 2",
+    "P4322"  : "P 43 2 2",
+    "P43212" : "P 43 21 2",
+    "I422"   : "I 4 2 2",
+    "I4132"  : "I 41 3 2",     
+    "I432"   : "I 4 3 2",
+    "I4122"  : "I 41 2 2",
+    "P3"     : "P 3",
+    "P31"    : "P 31",
+    "P32"    : "P 32",
+    "R3"     : "R 3",
+    "H3"     : "H 3",
+    "P312"   : "P 3 1 2",
+    "P321"   : "P 3 2 1",
+    "P3112"  : "P 31 1 2",
+    "P3121"  : "P 31 2 1",
+    "P3212"  : "P 32 1 2",
+    "P3221"  : "P 32 2 1", 
+    "H32"    : "H 3 2",
+    "R32"    : "R 3 2",
+    "P6"     : "P 6",
+    "P61"    : "P 61",
+    "P65"    : "P 65",
+    "P62"    : "P 62",
+    "P6222"  : "P 62 2 2",
+    "P64"    : "P 64",
+    "P63"    : "P 63",
+    "P622"   : "P 6 2 2",
+    "P6122"  : "P 61 2 2",
+    "P6522"  : "P 65 2 2",
+    "P6522"  : "P 65 2 2",
+    "P6422"  : "P 64 2 2",
+    "P6322"  : "P 63 2 2",
+    "P23"    : "P 2 3",
+    "F23"    : "F 2 3",
+    "I23"    : "I 2 3",
+    "P213"   : "P 21 3",
+    "I213"   : "I 21 3",
+    "F432"   : "F 4 3 2",
+    "P432"   : "P 4 3 2",
+    "P4232"  : "P 42 3 2",
+    "P4332"  : "P 43 3 2",
+    "P4132"  : "P 41 3 2",
+    "F4132"  : "F 41 3 2" }
